# openhpa

./: .dockerignore  .env.example  .gitignore  .rustfmt.toml  .taplo.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  rust-toolchain.toml
.github/workflows/: ci.yml  e2e.yml  release.yml  soak.yml
core/: Cargo.toml
core/src/: domain.rs  forecast.rs  lib.rs  llm.rs  rules.rs  synthesis.rs
deploy/helm/openhpa/: Chart.yaml  README.md  artifacthub-repo.yml  values.yaml
deploy/helm/openhpa/crds/: scalingrecommendation.yaml
deploy/helm/openhpa/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml
docs/: architecture.md
docs/adr/: 0001-in-cluster-operator.md  0002-open-source-conversion.md
docs/manual/: 01-overview.md  02-requirements.md  03-installation.md  04-configuration-reference.md  06-usage.md  07-operating.md  08-security.md  09-troubleshooting.md  10-uninstall.md  README.md
e2e-tests/: Cargo.toml
e2e-tests/src/: lib.rs
e2e-tests/tests/: crd_roundtrip.rs  keda_and_leader.rs  mocked_llm.rs  reconcile.rs
operator/: Cargo.toml
operator/src/: applier.rs  collector.rs  config.rs  controller.rs  crd.rs  leader.rs  lib.rs  llm.rs  main.rs  metrics.rs  safety.rs
operator/tests/: helm_chart.rs
validation/: README.md  run.sh  workloads.yaml
