[workspace]
members  = ["core", "e2e-tests", "operator"]
resolver = "2"

[workspace.package]
edition      = "2024"
license      = "Apache-2.0"
repository   = "https://github.com/tonyschneider/openhpa"
rust-version = "1.91.1"
version      = "0.1.0"

[workspace.lints.clippy]
dbg_macro                   = "warn"
else_if_without_else        = "warn"
empty_structs_with_brackets = "warn"
if_then_some_else_none      = "warn"
infinite_loop               = "warn"
or_fun_call                 = "warn"
redundant_type_annotations  = "warn"
renamed_function_params     = "warn"
todo                        = "warn"
unimplemented               = "warn"

[workspace.dependencies]
anyhow = "1"
chrono = { features = ["clock", "serde"], version = "0.4" }
clap = { features = ["derive", "env"], version = "4" }
futures = "0.3"
k8s-openapi = { features = ["latest"], version = "0.24" }
kube = { features = ["client", "derive", "runtime"], version = "0.99" }
openhpa-core = { path = "./core" }
openhpa-operator = { path = "./operator" }
reqwest = { default-features = false, features = [
    "json",
    "rustls-tls",
], version = "0.12" }
schemars = "0.8"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
thiserror = "2"
tokio = { features = ["macros", "rt-multi-thread", "time"], version = "1" }
tracing = "0.1"
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
wiremock = "0.6"
