[package]
edition.workspace      = true
license.workspace      = true
name                   = "openhpa-operator"
rust-version.workspace = true
version.workspace      = true

[lib]
name = "openhpa_operator"
path = "src/lib.rs"

[[bin]]
name = "openhpa-operator"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
futures            = { workspace = true }
k8s-openapi        = { workspace = true }
kube               = { workspace = true }
openhpa-core       = { workspace = true }
reqwest            = { workspace = true }
schemars           = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }

[lints]
workspace = true
